# nodeice-board

./: .gitignore  LED_MATRIX_README.md  LICENSE  README.md  auto_update.sh  check_nodeice_status.sh  config.yaml  install_auto_update.sh  install_matrix_service.sh  install_service.sh  kill_previous_instances.sh  main.py  pyproject.toml  raspberry_pi_boot_setup_summary.md  raspberry_pi_setup.md  setup.py  setup.sh  setup_meshtastic_device.sh  setup_pi.sh  test_led_matrix.py  test_led_permissions.sh
case/: README.md  nodeice_case.scad
case/stl/: nodeice_case_front.stl  nodeice_case_rear.stl
nodeice-matrix/: README.md  config.yaml  db_monitor.py  display_controller.py  install_matrix_service.sh  matrix_display.py  requirements.txt
nodeice_board/: __init__.py  command_handler.py  config.py  database.py  led_matrix_display.py  main.py  matrix_message_handler.py  meshtastic_interface.py  metrics_collector.py  post_expiration.py
nodeice_board/matrix/: __init__.py  app.py  driver.py  main.py  render.py  scenes.py  watcher.py
tests/: matrix_fakes.py  test_command_handler.py  test_config.py  test_database.py  test_matrix_app.py  test_matrix_render.py  test_matrix_watcher.py  test_meshtastic_interface.py
