[project]
name = "nodeice-board"
version = "0.1.1"
description = "Meshtastic-based notice board application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "meshtastic>=2.7.10",
    "pypubsub>=4.0.3",
    "pyyaml>=6.0",
]

[project.scripts]
nodeice-board = "nodeice_board.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nodeice_board"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
