[project]
name = "nodeice-board"
version = "0.2.0"
description = "Meshtastic-based notice board application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "meshtastic>=2.7.10",
    "pypubsub>=4.0.3",
    "pyyaml>=6.0",
]

[project.scripts]
nodeice-board = "nodeice_board.main:main"
nodeice-board-matrix = "nodeice_board.matrix.main:main"

[project.optional-dependencies]
# Desktop testing of the LED matrix display without hardware:
#   pip install -e ".[emulator]" && nodeice-board-matrix --emulator
emulator = [
    "RGBMatrixEmulator>=0.11",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nodeice_board", "nodeice_board.matrix"]

[tool.setuptools.package-data]
"nodeice_board.matrix" = ["fonts/*.bdf"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
